--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://github.com/cu-ecen-5013/assignment-autotest
 [submodule "buildroot"]
 	path = buildroot
-	url = https://git.busybox.net/buildroot/
+	url = https://github.com/buildroot/buildroot
 	branch = 2023.08.x
